--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <title>Password Generator</title>
 </head>
 
 <body>
   <main>
-    <h1>Generate a random password</h1>
-    <h3>Never use an insecure password again.</h3>
-    <button class="btn">Generete passwords</button>
+    <h1 id="main-title">Generate a <span id="main-title-span">random password</span></h1>
+    <h3 id="sub-title">Never use an insecure password again.</h3>
+    <button class="btn" id="btn-generate-password">Generete passwords</button>
     <hr>
     <div class="password-container">
-      <input type="text" class="password" value="Your password will appear here" readonly>
-      <input type="text" class="password" value="Your password will appear here" readonly>
+      <input type="text" id="first-password-output" class="password" value="Your password will appear here" readonly>
+      <input type="text" id="second-password-output" class="password" value="Your password will appear here" readonly>
     </div>
   </main>
 </body>
