--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-  <main>
-    <h1 id="main-title">Generate a <span id="main-title-span">random password</span></h1>
+  <main id="main-container">
+    <h1 id="main-title">Generate a <br/> <span id="main-title-span">random password</span></h1>
     <h3 id="sub-title">Never use an insecure password again.</h3>
-    <button class="btn" id="btn-generate-password">Generete passwords</button>
-    <hr>
+    <button class="btn" id="btn-generate-password">Generate passwords</button>
+    <hr class="divider" id="between-generate-and-password">
     <div class="password-container">
-      <input type="text" id="first-password-output" class="password" value="Your password will appear here" readonly>
-      <input type="text" id="second-password-output" class="password" value="Your password will appear here" readonly>
+      <input type="text" id="first-password-output" class="password-output" placeholder="Password appears here" readonly>
+      <input type="text" id="second-password-output" class="password-output" placeholder="Password appears here" readonly>
     </div>
   </main>
 </body>
