add password options for length and character types in the password generator

--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
   <main id="main-container">
     <h1 id="main-title">Generate a <br /> <span id="main-title-span">random password</span></h1>
     <h3 id="sub-title">Never use an insecure password again.</h3>
+    <div class="password-options-container">
+      <div class="password-length-container">
+        <label for="password-length" id="password-length-label" class="password-options-label">Length</label>
+        <input type="number" id="password-length" class="password-options" min="8" max="32" value="15"
+          aria-label="Password length" aria-live="polite">
+      </div>
+      <div class="password-checkbox-container">
+        <label for="password-number-checkbox" id="password-number-checkbox-label"
+          class="password-options-label">Numbers</label>
+        <input type="checkbox" id="password-number-checkbox" class="password-options"
+          aria-label="Checkbox for enabling numbers on password" aria-live="polite">
+        <label for="password-symbols-checkbox" id="password-symbols-checkbox-label"
+          class="password-options-label">Special Characters</label>
+        <input type="checkbox" id="password-symbols-checkbox" class="password-options"
+          aria-label="Checkbox for enabling numbers on password" aria-live="polite">
+      </div>
+    </div>
     <button class="btn" id="btn-generate-password" aria-label="Generate password" role="button">Generate
       passwords</button>
     <hr class="divider" id="between-generate-and-password">
