add checkbox for special characters option in password generator

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           class="password-options-label">Numbers</label>
         <input type="checkbox" id="password-number-checkbox" class="password-options"
           aria-label="Checkbox for enabling numbers on password" aria-live="polite">
+        </div>
+        <div class="password-checkbox-container">
         <label for="password-symbols-checkbox" id="password-symbols-checkbox-label"
           class="password-options-label">Special Characters</label>
         <input type="checkbox" id="password-symbols-checkbox" class="password-options"
