rename password length input ID and update special characters checkbox label for clarity

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="password-options-container">
       <div class="password-length-container">
         <label for="password-length" id="password-length-label" class="password-options-label">Length</label>
-        <input type="number" id="password-length" class="password-options" min="8" max="32" value="15"
+        <input type="number" id="password-length-input" class="password-options" min="8" max="32" value="15"
           aria-label="Password length" aria-live="polite">
       </div>
       <div class="password-checkbox-container">
@@ -34,7 +34,7 @@
         <label for="password-symbols-checkbox" id="password-symbols-checkbox-label"
           class="password-options-label">Special Characters</label>
         <input type="checkbox" id="password-symbols-checkbox" class="password-options"
-          aria-label="Checkbox for enabling numbers on password" aria-live="polite">
+          aria-label="Checkbox for enabling special characters on password" aria-live="polite">
       </div>
     </div>
     <button class="btn" id="btn-generate-password" aria-label="Generate password" role="button">Generate
