--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <h3 id="sub-title">Never use an insecure password again.</h3>
     <div class="password-options-container">
       <div class="password-length-container">
-        <label for="password-length-input" id="password-length-label" class="password-options-label">Length</label>
-        <input type="number" id="password-length-input" class="password-options" min="8" max="20" value="12"
+        <label title="A number between 8 and 20" for="password-length-input" id="password-length-label" class="password-options-label">Length</label>
+        <input title="A number between 8 and 20" type="number" id="password-length-input" class="password-options" min="8" max="20" value="12" 
           aria-label="Password length" aria-live="polite">
       </div>
       <div class="password-checkbox-container">
