--- a/index.html
+++ b/index.html
@@ -21,28 +21,30 @@
     <form id="password-form" autocomplete="off">
       <div class="password-length-container">
         <label for="password-length-input" id="password-length-label" class="password-options-label">Characters</label>
-        <input type="range" id="password-length-input" class="password-options" min="8" max="20" value="12" aria-labelledby="password-length-label" aria-live="polite" aria-valuemin="8" aria-valuemax="20" aria-valuenow="12">
+        <input type="range" id="password-length-input" class="password-options" min="8" max="40" value="12"
+          aria-labelledby="password-length-label" aria-live="polite" aria-valuemin="8" aria-valuemax="40"
+          aria-valuenow="12">
         <output id="password-length-output" for="password-length-input">12</output>
-        <span id="password-length-description" class="sr-only">Select the number of characters for your password. Minimum 8, maximum 20.</span>
+        <span id="password-length-description" class="sr-only">Select the number of characters for your password.
+          Minimum 8, maximum 40.</span>
       </div>
-        <div class="password-checkbox-container">
-          <label for="password-lowercase-checkbox" id="password-lowercase-checkbox-label"
-            class="password-options-label">Lowercase</label>
-          <input type="checkbox" id="password-lowercase-checkbox" class="password-options"
-            aria-labelledby="password-lowercase-checkbox-label" aria-live="polite">
-            <label for="password-uppercase-checkbox" id="password-uppercase-checkbox-label"
-              class="password-options-label">Uppercase</label>
-            <input type="checkbox" id="password-uppercase-checkbox" class="password-options"
-              aria-labelledby="password-uppercase-checkbox-label" aria-live="polite">
-          <label for="password-numbers-checkbox" id="password-numbers-checkbox-label"
-            class="password-options-label">Numbers</label>
-          <input type="checkbox" id="password-numbers-checkbox" class="password-options"
-          aria-labelledby="password-numbers-checkbox-label" aria-live="polite">
-          <label for="password-special-chars-checkbox" id="password-special-chars-checkbox-label"
-            class="password-options-label">Special Characters</label>
-          <input type="checkbox" id="password-special-chars-checkbox" class="password-options"
-          aria-labelledby="password-special-chars-checkbox-label" aria-live="polite">
-        </div>
+      <div class="password-checkbox-container">
+        <div class="checkbox-wrapper"><label for="password-lowercase-checkbox" id="password-lowercase-checkbox-label"
+          class="password-options-label">Lowercase</label>
+        <input type="checkbox" id="password-lowercase-checkbox" class="password-options"
+          aria-labelledby="password-lowercase-checkbox-label" aria-live="polite"></div>
+        <div class="checkbox-wrapper"><label for="password-uppercase-checkbox" id="password-uppercase-checkbox-label"
+          class="password-options-label">Uppercase</label>
+        <input type="checkbox" id="password-uppercase-checkbox" class="password-options"
+          aria-labelledby="password-uppercase-checkbox-label" aria-live="polite"></div>
+        <div class="checkbox-wrapper"><label for="password-numbers-checkbox" id="password-numbers-checkbox-label"
+          class="password-options-label">Numbers</label>
+        <input type="checkbox" id="password-numbers-checkbox" class="password-options"
+          aria-labelledby="password-numbers-checkbox-label" aria-live="polite"></div>
+        <div class="checkbox-wrapper"><label for="password-special-chars-checkbox" id="password-special-chars-checkbox-label"
+          class="password-options-label">Special Characters</label>
+        <input type="checkbox" id="password-special-chars-checkbox" class="password-options"
+          aria-labelledby="password-special-chars-checkbox-label" aria-live="polite"></div>
       </div>
       <button title="Generate password" class="btn-light" id="btn-generate-password" aria-label="Generate password"
         role="button">Generate password</button>
@@ -53,8 +55,8 @@
         placeholder="Password appears here" aria-label="Output for password" aria-live="polite" readonly>
       <button title="Copy to clipboard" class="btn-light" id="btn-copy-to-clipboard"
         aria-label="Copy password to clipboard" role="button">
-        <svg xmlns="http://www.w3.org/2000/svg" class="gfg-icon" width="20" height="20" viewBox="0 0 24 24"
-          stroke-width="2.0" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="2.0"
+          stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <title>Two boards in front of each other</title>
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M8 8m0 2a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v8a2 2 0 0 1 -2 2h-8a2 2 0 0 1 -2 -2z"></path>
