refactor: improve checkbox layout for password options to enhance accessibility

--- a/index.html
+++ b/index.html
@@ -29,22 +29,30 @@
           Minimum 8, maximum 40.</span>
       </div>
       <div class="password-checkbox-container">
-        <div class="checkbox-wrapper"><label for="password-lowercase-checkbox" id="password-lowercase-checkbox-label"
-          class="password-options-label">Lowercase</label>
-        <input type="checkbox" id="password-lowercase-checkbox" class="password-options"
-          aria-labelledby="password-lowercase-checkbox-label" aria-live="polite"></div>
-        <div class="checkbox-wrapper"><label for="password-uppercase-checkbox" id="password-uppercase-checkbox-label"
-          class="password-options-label">Uppercase</label>
-        <input type="checkbox" id="password-uppercase-checkbox" class="password-options"
-          aria-labelledby="password-uppercase-checkbox-label" aria-live="polite"></div>
-        <div class="checkbox-wrapper"><label for="password-numbers-checkbox" id="password-numbers-checkbox-label"
-          class="password-options-label">Numbers</label>
-        <input type="checkbox" id="password-numbers-checkbox" class="password-options"
-          aria-labelledby="password-numbers-checkbox-label" aria-live="polite"></div>
-        <div class="checkbox-wrapper"><label for="password-special-chars-checkbox" id="password-special-chars-checkbox-label"
-          class="password-options-label">Special Characters</label>
-        <input type="checkbox" id="password-special-chars-checkbox" class="password-options"
-          aria-labelledby="password-special-chars-checkbox-label" aria-live="polite"></div>
+        <div class="checkbox-wrapper">
+          <label for="password-lowercase-checkbox" id="password-lowercase-checkbox-label"
+            class="password-options-label">Lowercase</label>
+          <input type="checkbox" id="password-lowercase-checkbox" class="password-options"
+            aria-labelledby="password-lowercase-checkbox-label" aria-live="polite">
+        </div>
+        <div class="checkbox-wrapper">
+          <label for="password-uppercase-checkbox" id="password-uppercase-checkbox-label"
+            class="password-options-label">Uppercase</label>
+          <input type="checkbox" id="password-uppercase-checkbox" class="password-options"
+            aria-labelledby="password-uppercase-checkbox-label" aria-live="polite">
+        </div>
+        <div class="checkbox-wrapper">
+          <label for="password-numbers-checkbox" id="password-numbers-checkbox-label"
+            class="password-options-label">Numbers</label>
+          <input type="checkbox" id="password-numbers-checkbox" class="password-options"
+            aria-labelledby="password-numbers-checkbox-label" aria-live="polite">
+        </div>
+        <div class="checkbox-wrapper">
+          <label for="password-special-chars-checkbox"
+            id="password-special-chars-checkbox-label" class="password-options-label">Symbols</label>
+          <input type="checkbox" id="password-special-chars-checkbox" class="password-options"
+            aria-labelledby="password-special-chars-checkbox-label" aria-live="polite">
+        </div>
       </div>
       <button title="Generate password" class="btn-light" id="btn-generate-password" aria-label="Generate password"
         role="button">Generate password</button>
