refactor: set default checked state for password option checkboxes

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           <label for="password-lowercase-checkbox" id="password-lowercase-checkbox-label"
             class="password-options-label">Lowercase</label>
           <input type="checkbox" id="password-lowercase-checkbox" class="password-options"
-            aria-labelledby="password-lowercase-checkbox-label" aria-live="polite">
+            aria-labelledby="password-lowercase-checkbox-label" aria-live="polite" checked>
         </div>
         <div class="checkbox-wrapper">
           <label for="password-uppercase-checkbox" id="password-uppercase-checkbox-label"
             class="password-options-label">Uppercase</label>
           <input type="checkbox" id="password-uppercase-checkbox" class="password-options"
-            aria-labelledby="password-uppercase-checkbox-label" aria-live="polite">
+            aria-labelledby="password-uppercase-checkbox-label" aria-live="polite" checked>
         </div>
         <div class="checkbox-wrapper">
           <label for="password-numbers-checkbox" id="password-numbers-checkbox-label"
