refactor: enhance password checkbox functionality to allow single selection

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span id="password-length-description" class="sr-only">Select the number of characters for your password.
           Minimum 8, maximum 40.</span>
       </div>
-      <div class="password-checkbox-container">
+      <div class="password-checkbox-container" id="password-checkbox-container">
         <div class="checkbox-wrapper">
           <label for="password-lowercase-checkbox" id="password-lowercase-checkbox-label"
             class="password-options-label">Lowercase</label>
