refactor: implement copyToClipboard functionality with toast notifications and modularize related code

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
   </form>
   </main>
-  <div class="toast" id="copy-toast">Password copied to clipboard!</div>
+  <div class="toast" id="copy-toast" role="alert" aria-label="Password copied to clipboard!">Password copied to clipboard!</div>
 </body>
 
 </html>
